@@ -119,6 +119,12 @@ Prefering convenience over security, change .txt extension to .bat or .sh (depen
 Note that Bitcoin Core nodes will not connect to any TCP port other than the default.</td>
 </tr>
 <tr class="odd">
+<td class="cfg_name"> Net.BindToIF</td>
+<td class="cfg_type"> string</td>
+<td> "0.0.0.0" </td>
+<td class="cfg_info"> Network interface to bind to. "0.0.0.0" binds to all network interfaces.</td>
+</tr>
+<tr class="odd">
 <td class="cfg_name"> Net.MaxOutCons</td>
 <td class="cfg_type"> uint32</td>
 <td> 9</td>
